libs/isograph-react/src/tests/__isograph/Query/errors/raw_response_type.ts
export type Query__errors__raw_response_type = {
  node____id___v_id?: ({
    __typename: "Economist",
    id: string,
    name: string,
  } | null),
}

